--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "dist/main.d.ts",
   "scripts": {
     "start": "ts-node ./src/main.ts",
+    "test": "npx mocha",
     "dev": "nodemon --config nodemon.json src/main.ts",
     "dev:debug": "nodemon --config nodemon.json --inspect-brk src/main.ts",
     "build": "tsc"
@@ -21,9 +22,18 @@
   },
   "homepage": "https://github.com/dcalled/lol-universepedia#readme",
   "dependencies": {
+    "@types/chai": "^4.3.0",
+    "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.21",
+    "chai": "^4.3.6",
+    "mocha": "^9.2.1",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
+  },
+  "mocha": {
+    "bail": true,
+    "spec": "src/**/*.test.ts",
+    "require": "ts-node"
   }
 }
