--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
   "mocha": {
     "bail": true,
     "spec": "src/**/*.test.ts",
-    "require": "ts-node"
+    "require": "ts-node/register"
   }
 }
