--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lol-universepedia",
   "version": "0.0.1",
+  "type": "module",
   "description": "",
   "main": "dist/main.js",
   "types": "dist/main.d.ts",
@@ -22,18 +23,25 @@
   },
   "homepage": "https://github.com/dcalled/lol-universepedia#readme",
   "dependencies": {
-    "@types/chai": "^4.3.0",
-    "@types/mocha": "^9.1.0",
-    "@types/node": "^17.0.21",
-    "chai": "^4.3.6",
-    "mocha": "^9.2.1",
-    "nodemon": "^2.0.15",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.2"
+    "puppeteer": "^19.7.5"
   },
   "mocha": {
     "bail": true,
     "spec": "src/**/*.test.ts",
-    "require": "ts-node/register"
+    "require": "ts-node/register",
+    "node-option": [
+      "experimental-specifier-resolution=node",
+      "loader=ts-node/esm"
+    ]
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.15.3",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "nodemon": "^2.0.21",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.2"
   }
 }
